# Fasma

./: .deny.toml  .gitignore  Cargo.toml  LICENSE
api/: Cargo.toml
api/src/: lib.rs
api/src/eFunc/: mod.rs
api/src/eFunc/mem/platform/: mod.rs
api/src/eFunc/mem/platform/ARM/: ptr.rs
api/src/eFunc/mem/platform/x86/: mod.rs  ptr.rs
api/src/eSIMD/: mod.rs
api/src/eSIMD/platform/: mod.rs
api/src/eSIMD/platform/ARM/rolled/: extract.rs
api/src/eSIMD/platform/ARM/unrolled/: extract.rs
api/src/eSIMD/platform/aarch64/rolled/: extract.rs  mod.rs
api/src/eSIMD/platform/aarch64/unrolled/: extract.rs
api/src/eSIMD/platform/arm/rolled/: extract.rs
api/src/eSIMD/platform/arm/unrolled/: extract.rs
api/src/eSIMD/platform/x86/: mod.rs
api/src/eSIMD/platform/x86/rolled/: extract.rs  mod.rs  reverse.rs  shift.rs
api/src/eSIMD/platform/x86/unrolled/: bitwise.rs  compare.rs  extract.rs  mod.rs  reverse.rs  scalar.rs  shift.rs  shuffle.rs
api/src/eSIMD/platform/x86_64/rolled/: extract.rs  shift.rs
api/src/eSIMD/platform/x86_64/unrolled/: extract.rs  shift.rs
api/tests/: lib.rs
api/tests/ARM/: extract.rs
api/tests/eFunc/: mod.rs
api/tests/eFunc/mem/platform/: mod.rs
api/tests/eFunc/mem/platform/ARM/: mod.rs
api/tests/eFunc/mem/platform/x86/: mod.rs
api/tests/eSIMD/: mod.rs
api/tests/eSIMD/platform/ARM/: extract.rs  mod.rs
api/tests/eSIMD/platform/x86/: bitwise.rs  compare.rs  extract.rs  mod.rs  reverse.rs  scalar.rs  shift.rs  shuffle.rs
api/tests/x86/: extract.rs  mod.rs  shift.rs
docs/comments/arithmetic/: Two’s Complement (EN).markdown  (+1 more)
(+29 files in other folders)
